--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,180 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+:root {
+    --primary-color: rgb(3, 24, 63);
+    --secondary-color: purple;
+    --tertiary-color: gray;
+}
+body {
+color: var(--primary-color);
+font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+header {
+    padding: 20px 35px;
+    background-color: var(--tertiary-color);
+    display: flex;
+    justify-content:space-between;
+    flex-wrap:wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top:0;
+    background-image: url("../images/flower.jpg");
+    background-size: cover;
+    background-position: 80%;
+    background-attachment: fixed;
+    z-index: 9999;
+}
+header h1 {
+    font-weight:bold;
+    font-size: 36px;
+    color: var(--primary-color);
+    margin: 0;
+    text-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+
 .nav {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    margin: 7px 0;
 }
 
 .nav ul {
     display: flex;
     flex-direction: row;
     list-style: none;
+    justify-content:space-between;
+    align-items:center;
 }
 
 .nav ul li {
     margin-right: 50px;
     cursor: pointer;
 }
+div {
+    padding: 60px;
+}
+.about-me {
+    width: 50%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around; 
+    
+}
+.about-me h2 {
+    font-size: 28px;
+}
+.about-me p {
+    font-size: 17px;
+}
+.contact-form {
+    border: 3px solid var(--secondary-color);
+    padding: 20px;
+    color: var(--secondary-color); 
+    width: 40%;
+    margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    background-color:rgba(252, 225, 56, 0.80);
+    border-radius: 15px;  
+}
+.contact-me p {
+    margin: 5px 0 15px 0;
+}
+.form-input {
+    border: 1px solid var(--secondary-color);
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: var(--secondary-color);
+    width: 100%;
+    margin-bottom: 15px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+  }
+  .form-input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
+  }
+  .contact-form label {
+margin: 0 5px;
+  }
+.contact-form button {
+  color: #fce138;
+  background-color: #024e76;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 10px;
+}
+.contact-form button:hover {
+background-color: #39a6b2;
+}
+.checkbox-wrapper label, .radio-wrapper label {
+  position: relative;
+  left: 10px;
+  margin: 10px;
+  line-height: 1.6;
+}
+.checkbox-wrapper label::before, .radio-wrapper label::before {
+content: "";
+height: 20px;
+width: 20px;
+background: rgba(255, 255, 255, 0.75);
+border: 1px solid #024e76;
+position: absolute;
+top: -4px;
+left: -30px;
+}
+.radio-wrapper label::before {
+  border-radius: 50%;
+}
+.radio-wrapper label::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #024e76;
+  position: absolute;
+  left: -29px;
+  top: -3px;
+}
+
+.checkbox-wrapper label::after {
+  content: "";
+  height: 6px;
+  width: 14px;
+  border-left: 2px solid #024e76;
+  border-bottom: 2px solid #024e76;
+  position: absolute;
+  left: -26px;
+  top: 1px;
+  transform: rotate(-58deg);
+  background-image: radial-gradient(circle, #39a6b2, #024e76);
+}
+.checkbox-wrapper input + label::after, 
+.radio-wrapper input + label::after {
+  content: none;
+}
+
+.checkbox-wrapper input:checked + label::after, 
+.radio-wrapper input:checked + label::after {
+  content: "";
+}
+
+
+footer {
+    width: 100%;
+    padding: 40px 35px;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    display: flex;  
+}
+footer h2 {
+    color: var(--primary-color);
+font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
