--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,22 +66,14 @@ footer {
   background: var(--primary-color);
   width: 100%;
   padding: 40px 35px;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  display: flex; 
+  text-align: center;
 }
 footer h2 {
   color: var(--secondary-color);
   font-size: 30px;
   margin: 0;
 }
-footer div {
-  line-height: 1.5;
-  text-align: right;
-}
-footer a {
-  color: var(--secondary-color);
-}
+
 section {
     padding: 60px;
 }
@@ -122,6 +114,9 @@ section {
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
+.runbuddy-photo {
+  width: 95%;
+}
 
 .about-me-form h3 {
   font-size: 24px;
